# bridged-demo

./: .gitignore  README.md
bridged-demo/: .gitignore  README.md  index_data.py  main.py  pyproject.toml  requirements.txt  test.py
